Fix display on mobile

--- a/docs/WebApps/Evo/main.css
+++ b/docs/WebApps/Evo/main.css
@@ -54,7 +54,7 @@
 
 .textblock{
     position: relative;
-    top: 740px;
+    top: 780px;
     font-size: 1.3em;
     margin-left: 30px;
     margin-right: 30px;
